# Negative_Knowledge

./: .gitignore  00_HOW_WE_DID_IT.md  01_HOW_TO_REPRODUCE.md  CITATION.cff  LICENSE  README.md  negative_knowledge.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
appendix_reproduce/: README.md  analyze_results.py  run_pipeline.py
appendix_reproduce/bank/: PROVENANCE.md  nls_knowledge.jsonl
appendix_reproduce/eval/: phenomenon_checks_bnls.py
appendix_reproduce/logs/: verified_results.json
appendix_reproduce/prompts/: curator_prompt.md
appendix_reproduce/results/: BKdV_KNOWLEDGE_CHAIN.md
appendix_reproduce/scripts/: build_sandboxes.py  dispatch_subagent.py  run_eval.py
docs/: ARCHITECTURE.md
early_bkdv_pilot/: CASE_F_G_STUDIES.md  README.md
early_bkdv_pilot/eval/: burgers_T05_eval.py  kdv_T2_eval.py
examples/: agent_loop.py  quickstart.py  sample_nk_record.json
examples/sample_round1/: candidate.py  reasoning.md
metadata/: EXPERIMENT_MANIFEST_original.md  agent_calls.csv  decision_log.md
negative_knowledge/: __init__.py  __main__.py  curator.py  runtime.py
reference_solvers/: README.md  burgers_shock_ref.py  kdv_soliton_ref.py  shallow_water_ref.py
reference_solvers/ref_results/: burgers_T05_REF.npy  burgers_T05_REF_x.npy  kdv_T2_REF.npy  kdv_T2_REF_x.npy  sw_T04_REF.npy  sw_T04_REF_x.npy
reproduction/: README.md  agent_command.py  requirements.txt
reproduction/appendix/: README.md  analyze_results.py  run_pipeline.py
reproduction/section3/: README.md  analyze_results.py  count_tokens.py  curator_prompt.md  nk_curator.py  run_pipeline.py
reproduction/section4/: README.md  analyze_results.py  nk_curator.py  run_pipeline.py
section3/: README.md
section3/00_journal/: section3_journal_2026-05-13.md
section3/02_prompts/: sab_curator_deep.md  sab_curator_r2.md
section3/03_scripts/: build_curator_runs.py  build_curator_runs_deep.py  build_curator_runs_r2.py  build_deep_nkr.py  build_nkr.py  build_nkr_r3.py  consolidate_solver_dispatches.py  extract_solver_tokens.py  reproduce_paper_claims.py  run_deep_nkr.py  write_curator_audit.py  write_curator_audit_deep.py  write_curator_audit_r2.py  write_dispatch_log_deep.py  write_dispatch_log_r1.py  write_dispatch_log_r2.py
section3/05_results/: paper_claims_reproduction.json  paper_claims_reproduction.md
section3_reproduce/: README.md  analyze_results.py  count_tokens.py  curator_prompt.md  run_pipeline.py
section3_reproduce/logs/: b2_covering_bytes.json  dispatch_log_r2.jsonl  memory_tokens.json  solver_tokens.csv
section3_reproduce/prompts/: README.md  curator_prompt__single_round_simpler_schema.md  sab_curator.md
section4/: PLAN_v3.md  README.md
section4_reproduce/: README.md  analyze_results.py  nk_curator.py  run_pipeline.py
stage1_knowledge_production/: README.md
stage2_coupled_study/: README.md
tests/: test_agent_command.py  test_negative_knowledge.py  test_repro_records_validate.py
(+2183 files in other folders)
