[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "negative-knowledge"
dynamic = ["version"]
description = "Compact, typed memory that keeps agents from repeating failed routes."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Hanchun Wang", email = "hw660@cam.ac.uk" }]
keywords = ["agents", "negative knowledge", "agent memory", "research automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/hch-wang/Negative_Knowledge"
Issues = "https://github.com/hch-wang/Negative_Knowledge/issues"

[tool.setuptools]
py-modules = ["negative_knowledge"]

[tool.setuptools.dynamic]
version = { attr = "negative_knowledge.__version__" }
