[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "negative-knowledge"
dynamic = ["version"]
description = "A failure-aware shared memory layer for AutoResearch: turn failed attempts into bounded, typed negative-knowledge records."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hanchun Wang", email = "hw660@cam.ac.uk" }]
keywords = ["AutoResearch", "LLM agents", "negative knowledge", "agent memory", "research automation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Repository = "https://github.com/hch-wang/Negative_Knowledge"
Paper = "https://arxiv.org/abs/2606.21024"
Issues = "https://github.com/hch-wang/Negative_Knowledge/issues"

[tool.setuptools]
py-modules = ["negative_knowledge"]

[tool.setuptools.dynamic]
version = { attr = "negative_knowledge.__version__" }
